# crd2jsonschema

./: .gitignore  README.rst  crd2jsonschema.py  pyproject.toml
tests/: test_filenames.py
tests/cert-manager/13fcbb9384467ac871f3b031c3b4e5767ae46596/: README.md  example-staging-issuer.yaml  test_cert_manager_crds.py
tests/fluxcd-helm-operator/284a6dfdac02e78d3246e44e95f216a334e3d2d5/: README.md  example-helmrelease.yaml  test_flux_helm_operator_crds.py
